--- a/PackageSources/html_ui/CSS_SU95/A32NX_Display_Common.css
+++ b/PackageSources/html_ui/CSS_SU95/A32NX_Display_Common.css
@@ -191,7 +191,7 @@ text {
   height: 100%;
   border: none;
   z-index: 999;
-  background-image: url(/css/thalesTest.svg);
+  background-image: url(/css_SU95/thalesTest.svg);
   background-size: cover;
 }
 
